# kcc

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  build-toolchain-direct.sh  build.sh  build_multiarch.sh  fix-gcc-install.sh  generate_xcode.rb  quick_fix_build.sh  sh2_build.sh  sh2_toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
debug/: verification.sh
dreamcast_sdk/src/: aica.c  dreamcast_init.c  gdrom.c  maple.c  pvr.c  vmu.c
examples/: hello.c  hello_min.c  main.m  multiarch_demo.c  register_allocator_usage.c  teste.c
include/: array_runtime.h  ast.h  builtins.h  codegen.h  common_includes.h  dreamcast.h  dreamcast_aica.h  dreamcast_gdrom.h  dreamcast_maple.h  dreamcast_pvr.h  dreamcast_vmu.h  error.h  kcc.h  lexer.h  multiarch_codegen.h  parser.h  preprocessor.h  saturn.h  saturn_cd.h  saturn_scsp.h  saturn_scu.h  saturn_smpc.h  saturn_vdp1.h  saturn_vdp2.h  semantic.h  sh2_codegen.h  sh2_instruction_set.h  sh2_optimizer.h  sh2_register_allocator.h  sh2_registers.h  sh4_codegen.h  sh4_instruction_set.h  sh4_optimizer.h  sh4_register_allocator.h  sh4_registers.h  symbol_table.h  types.h  utils.h
kcc.xcodeproj/: project.pbxproj
kcc.xcodeproj/project.xcworkspace/xcuserdata/pedro.xcuserdatad/: UserInterfaceState.xcuserstate
kcc.xcodeproj/xcuserdata/pedro.xcuserdatad/xcschemes/: xcschememanagement.plist
macros/: android.h  apple_platform.h  kcc_stdio.h  linux.h  math.h  posix.h  psx.h
saturn_sdk/: crt0.S  saturn.ld
saturn_sdk/src/: cd_block.c  saturn_init.c  scsp.c  scu.c  smpc.c  vdp1.c  vdp2.c
scripts/: link_stdlib.sh
src/: ast.c  builtin_macros.c  builtins.c  codegen.c  dreamcast_runtime.c  error.c  lexer.c  main.c  main_saturn.c  multiarch_codegen.c  parser.c  preprocessor.c  saturn.ld  saturn_runtime.c  saturn_scsp.c  saturn_smpc.c  saturn_sr0.S  semantic.c  sh2_codegen.c  sh2_instruction_set.c  sh2_optimizer.c  sh2_register_allocator.c  sh4_codegen.c  sh4_instruction_set.c  sh4_optimizer.c  sh4_register_allocator.c  startup.s  symbol_table.c  utils.c
stdlib/: kcc_stdlib.h
suite/: README.md  kayte_test_suite.tsx
tests/: test_lexer.c  test_main.c  test_parser.c
toolchain/gcc-sh2/: CMakeLists.txt  build-binutils.cmake  build-gcc-stage1.cmake  build-gcc-stage2.cmake  build-newlib.cmake  toolchain-template.cmake.in
toolchain/gcc-sh4/: CMakeLists.txt  build-binutils.cmake  build-gcc-stage1.cmake  build-gcc-stage2.cmake  build-newlib.cmake  toolchain-template.cmake.in
toolchain/kayte/: CMakeLists.txt
toolchain/psx/: CMakeLists.txt
tools/differ/: main.cpp
